--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
   <body>
     <header class="page-header">
       <nav class="page-nav">
-        <a class="page-logo" href="./index.html">
-          <span class="logo-decor">Web</span>Studio</a
+        <a href="./index.html" class="page-logo"
+          >Web<span class="logo-decor-header">Studio</span></a
         >
         <ul class="menu">
           <li class="menu-item">
-            <a href="" class="menu-link">Studio</a>
+            <a href="./index.html" class="menu-link">Studio</a>
           </li>
           <li class="menu-item">
-            <a href="#portfolio" class="menu-link">Portfolio</a>
+            <a href="" class="menu-link">Portfolio</a>
           </li>
           <li class="menu-item">
             <a href="" class="menu-link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="address-list">
           <li class="address-item">
             <a href="mailto:info@devstudio.com" class="address-link"
@@ -62,7 +62,7 @@
         <ul class="benefits-list">
           <li class="benefits-item">
             <h3 class="benefits-title">Strategy</h3>
-            <p class="benefits-tex">
+            <p class="benefits-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -93,7 +93,7 @@
       <section class="team">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="avatar Mark Guerrero"
@@ -103,7 +103,7 @@
             <h3 class="team-title">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/tom-ford.jpg"
               alt="avatar Tom Ford"
@@ -113,7 +113,7 @@
             <h3 class="team-title">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/camila-garcia.jpg"
               alt="avatar Camila Garcia"
@@ -123,7 +123,7 @@
             <h3 class="team-title">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="avatar Daniel Wilson"
@@ -202,8 +202,8 @@
       </section>
     </main>
     <footer class="page-footer">
-      <a href="./index.html" class="page-logo logo-footer"
-        ><span class="logo-decor">Web</span>Studio</a
+      <a href="./index.html" class="page-logo"
+        >Web<span class="logo-decor-footer">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
